# tnmt

./: .bashrc  .gitignore  .travis.yml  README.md  ros.md
docker/turtlebot2i_deep_qlearning/turtlebot2i_deep_qlearning/: package.xml
docker/turtlebot2i_deep_qlearning/turtlebot2i_deep_qlearning/dqn/: Environment.py  NeuralNetwork.py  dqn.ipynb.json  graph.txt  main.py  maxqgraph.txt  requirements.txt  respawnGoal.py  training_graph.py
docker/turtlebot2i_deep_qlearning/turtlebot2i_deep_qlearning/dqn/saved_model/: model_1.h5  model_10.h5  model_100.h5  model_1000.h5  model_1010.h5  model_1020.h5  model_1030.h5  model_1040.h5  model_1050.h5  model_1060.h5  model_1070.h5  model_1080.h5  model_1090.h5  model_110.h5  model_1100.h5  model_1110.h5  model_1120.h5  model_1130.h5  model_1140.h5  model_1150.h5  model_1160.h5  model_1170.h5  model_1180.h5  model_1190.h5  model_120.h5  model_1200.h5  model_1210.h5  model_1220.h5  model_1230.h5  model_1240.h5  model_1250.h5  model_1260.h5  model_1270.h5  model_1280.h5  model_1290.h5  (+563 more)
turtlebot2i_deep_qlearning/: CMakeLists.txt  setup.py
turtlebot2i_deep_qlearning/dqn_refactored/: Agent.py  Environment.py  NeuralNetwork.py  dqn_model.h5  graph.txt  main.py  maxqgraph.txt  moving_obstacle.py  moving_obstacles.py  plot_graph_from_file.py  respawnGoal.py  respawnGoal.py.save
turtlebot2i_deep_qlearning/dqn_refactored/goal_square/: model.sdf
turtlebot2i_deep_qlearning/dqn_refactored/goal_square/goal_box/: model.sdf
turtlebot2i_deep_qlearning/plot/: plot_function.py
turtlebot2i_deep_qlearning/save_model/: model_5230.h5
(+35 files in other folders)
